After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 658800 - h264parse: do not try to read from a non existent VUI
h264parse: do not try to read from a non existent VUI
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 0.10.23
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-12 10:22 UTC by Vincent Penquerc'h
Modified: 2011-09-19 07:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
h264parse: do not try to read from a non existent VUI (2.05 KB, patch)
2011-09-12 10:22 UTC, Vincent Penquerc'h
committed Details | Review

Description Vincent Penquerc'h 2011-09-12 10:22:30 UTC
Note that, not knowing the format, I don't know if not having
a VUI there is indicative of a corrupt stream, but at least it
stops the parser crashing.
Comment 1 Vincent Penquerc'h 2011-09-12 10:22:32 UTC
Created attachment 196241 [details] [review]
h264parse: do not try to read from a non existent VUI
Comment 2 Sebastian Dröge (slomo) 2011-09-19 07:27:42 UTC
commit ac5121eb018ec7da6a76c28cc4dcb41474731261
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Mon Sep 12 11:17:20 2011 +0100

    h264parse: do not try to read from a non existent VUI
    
    https://bugzilla.gnome.org/show_bug.cgi?id=658800