h264parse: do not try to read from a non existent VUI

https://bugzilla.gnome.org/show_bug.cgi?id=658800